--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+body{
+    background-color: tomato;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
