--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-color: tomato;
+    background-color: red;
     display: flex;
     align-items: center;
     justify-content: center;
